crates/bt/src/snapshots/telmo_bt__ui__tests__connecting.snap
---
source: crates/bt/src/ui.rs
expression: h.render()
---
 Bluetooth                                                                           ● on

╭─ Connected ────────────────────────────────────────────────────────────────────────────╮
│   AirPods Pro                             80% · case 45%                               │
│   Keychron K3                             61%                                          │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Paired ───────────────────────────────────────────────────────────────────────────────╮
│ ▌ MX Master 3S                            ◜ connecting…                                │
│   Sony WH-1000XM5                                                                      │
│   Xbox Wireless Controller                                                             │
╰────────────────────────────────────────────────────────────────────────────────────────╯










 ↵ connect  s scan  i details  p turn off  ? more  esc close
