crates/bt/src/snapshots/telmo_bt__ui__tests__devices.snap
---
source: crates/bt/src/ui.rs
expression: "Harness::new(mock::snapshot()).render()"
---
 Bluetooth                                                                           ● on

╭─ Connected ────────────────────────────────────────────────────────────────────────────╮
│ ▌ AirPods Pro                             80% · case 45%                               │
│   Keychron K3                             61%                                          │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Paired ───────────────────────────────────────────────────────────────────────────────╮
│   MX Master 3S                                                                         │
│   Sony WH-1000XM5                                                                      │
│   Xbox Wireless Controller                                                             │
╰────────────────────────────────────────────────────────────────────────────────────────╯










 ↵ disconnect  s scan  i details  ? more  esc close
