crates/bt/src/snapshots/telmo_bt__ui__tests__off.snap
---
source: crates/bt/src/ui.rs
expression: "Harness::new(snapshot).render()"
---
 Bluetooth                                                                          ○ off

╭─ Bluetooth is off ─────────────────────────────────────────────────────────────────────╮
│                                                                                        │
│  p turn on                                                                             │
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯














 p turn on  esc close
