crates/bt/src/snapshots/telmo_bt__ui__tests__pair.snap
---
source: crates/bt/src/ui.rs
expression: h.render()
---
 Bluetooth                                                                           ● on

╭─ Connected ────────────────────────────────────────────────────────────────────────────╮
│   AirPods Pro                             80% · case 45%                               │
│   Keychron K3                             61%                                          │
╰─────────────╭─ Pair Keychron Q1 ─────────────────────────────────────────╮─────────────╯
╭─ Paired ────│                                                            │─────────────╮
│   MX Master │  Type this code on the keyboard, then press Enter on it.   │             │
│   Sony WH-10│                                                            │             │
│   Xbox Wirel│               █ █ █▀█ ▀▀█ █▀█ ▀█  ▀▀█                      │             │
╰─────────────│               ▀▀█ █▀█ █▀▀ ▀▀█  █   ▀█                      │─────────────╯
╭─ Nearby ────│                 ▀ ▀▀▀ ▀▀▀ ▀▀▀ ▀▀▀ ▀▀▀                      │ ◜ scanning ─╮
│ ▌ Keychron Q│                                                            │             │
│   Galaxy Bud│  ◜ waiting for the keyboard          esc cancel            │             │
│   Bose QC45 │                                                            │             │
│   Unnamed de╰────────────────────────────────────────────────────────────╯             │
╰────────────────────────────────────────────────────────────────────────────────────────╯




 ↵ connect  s scan  i details  p turn off  ? more  esc close
