crates/bt/src/snapshots/telmo_bt__ui__tests__scan.snap
---
source: crates/bt/src/ui.rs
expression: nearby_selected().render()
---
 Bluetooth                                                                           ● on

╭─ Connected ────────────────────────────────────────────────────────────────────────────╮
│   AirPods Pro                             80% · case 45%                               │
│   Keychron K3                             61%                                          │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Paired ───────────────────────────────────────────────────────────────────────────────╮
│   MX Master 3S                                                                         │
│   Sony WH-1000XM5                                                                      │
│   Xbox Wireless Controller                                                             │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Nearby ────────────────────────────────────────────────────────────────── ◜ scanning ─╮
│ ▌ Keychron Q1                             ▂▄▆█                                         │
│   Galaxy Buds2 Pro                        ▂▄▆█                                         │
│   Bose QC45                               ▂▄▆█                                         │
│   Unnamed device                          ▂▄▆█                                         │
╰────────────────────────────────────────────────────────────────────────────────────────╯




 ↵ pair  s stop scan  tab pane  esc close
